@@ -2,6 +2,10 @@
 *** WIP *** stardot.5 I never finished this or the assembler comment updates :(
 
 
+2025/02/11 issue with .swrDemoCheckTileEdible not finding items could be the map address is incorrect ?
+
+
+
 
 ------------------------------------------------------------------------------------------------------------------------------------------------------
 2021/04/01
